Import Component + SCSS

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,3 +13,7 @@
 @import '../components/Feature/feature';
 @import '../components/Header/header';
 @import '../components/Topic/topic';
+
+@import '../components/Feedback/feedback';
+@import '../components/AppDownload/appdownload';
+@import '../components/CTA/cta';
