--- a/src/components/Header/components/Search/_search.scss
+++ b/src/components/Header/components/Search/_search.scss
@@ -39,3 +39,20 @@
         }
     }
 }
+
+
+// @media only screen and (max-width: 650px){
+//     .search {
+//         // background-color: #fff;
+//         // z-index: 1000;
+//         // width: 100%;
+//         // position: absolute;
+//          &__input {
+//             &:focus {
+//                 position: absolute;
+//                 width: 100%;
+//                 left: 0;
+//             }
+//     }
+//     }
+// }
