footer link and social

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -6,7 +6,7 @@
 
     transition: all .2s;
     // background-color: red;
-    box-shadow: $box-shawdow;
+    box-shadow: $box-shadow;
     position: sticky;
     top: 0;
     background-color: $color-white;
