--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -26,6 +26,6 @@ $padding-container: 10%;
 $padding-container-md: 8%;
 $padding-container-sm: 5%;
 
-$box-shawdow: 0px 6px 20px rgba($color-black, .05);
+$box-shadow: 0px 6px 20px rgba($color-black, .05);
 
 $boder-radious: 50px;
