--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,10 @@
 @import '../components/Header/components/ButtonCreate/buttonCreate';
 @import '../components/Header/components/Search/search';
 @import '../components/Header/components/Logo/logo';
+@import '../components/Footer/components/Copyright/copyright';
+@import '../components/Footer/components/FooterColumn/footerColumn';
+@import '../components/Footer/components/SocialFooter/socialFooter';
+
 
 @import '../components/ButtonCustom/buttonCustom';
 @import '../components/Heading/heading';
@@ -13,3 +17,4 @@
 @import '../components/Feature/feature';
 @import '../components/Header/header';
 @import '../components/Topic/topic';
+@import '../components/Footer/footer';
