--- a/src/components/Feature/components/FeatureItem/_featureItem.scss
+++ b/src/components/Feature/components/FeatureItem/_featureItem.scss
@@ -1,7 +1,7 @@
 .feature-item {
     margin: auto;
     border-radius: 5px;
-    box-shadow: $box-shawdow;
+    box-shadow: $box-shadow;
     padding: 2rem;
     transition: all .2s;
     // border: 1px solid red;
