--- a/src/components/Topic/TopicItem/_topicItem.scss
+++ b/src/components/Topic/TopicItem/_topicItem.scss
@@ -1,5 +1,5 @@
 .topic-item {
-    box-shadow: $box-shawdow;
+    box-shadow: $box-shadow;
     transition: all .2s;
     position: relative;
     border-radius: 5px;
