complete 3 session - ver 1

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,3 +13,6 @@
 @import '../components/Feature/feature';
 @import '../components/Header/header';
 @import '../components/Topic/topic';
+@import '../components/Description/Description';
+
+@import '../components/Value/value';
