--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -1,1 +1,100 @@
-// This is file banner.scss
+ 
+.banner{
+    background-color: $color-primary-dark;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 0 0 $padding-container;
+    margin: 0;
+    max-height: 62vh;
+
+    &__img{
+        // background-image: url('../../img/learning-online.jpg');
+        position: relative;
+        img {
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            object-fit: cover;
+        }
+    }
+    .ant-btn-primary{
+        background: $color-succes;
+        margin: 3rem 0;
+    }
+    h1{
+        font-size: $font-size-heading1;
+        margin: 0;
+        display: table-header-group;
+        // line-height: 5rem;
+    }
+
+    &__center{
+        text-align: center;
+    }
+
+    &__text-color{
+        color: $color-white;
+    }
+    &__space{
+        padding-top: 10rem;
+    }
+    p{
+        font-size: $font-size-subtitle1;
+        margin: 0;
+    }
+}
+
+@media (max-width: 1300px) {
+    .banner{
+        background-color: $color-primary-dark;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 0 0 $padding-container-md;
+        margin: 0;
+    }
+
+    p{
+        padding-right: 2rem;
+    }
+}
+
+@media (max-width: 1260px) {
+    h1{
+        line-height: 5rem;
+    }
+    .banner{
+        padding: 0 0 0 $padding-container-sm;
+        max-height: 70vh;
+    }
+}
+
+@media(max-width: 665px){
+    .banner{
+        flex-direction: column;
+        padding: 0 $padding-container-sm;
+        max-height: 100vh;
+        &__img{
+            // background-image: url('../../img/learning-online.jpg');
+            position: relative;
+            img {
+                width: 100%;
+                height: 30%;
+                background-repeat: no-repeat;
+                object-fit: cover;
+            }
+        }
+
+        &__space{
+            padding-top: 1rem;
+        }
+
+        .ant-btn-primary{
+            // height: 3rem;
+            // width: 10rem;
+            padding: 0 8px;
+            text-align: center;
+            background: $color-succes;
+            margin: 0.5rem 0;
+        }
+    }
+}
