--- a/src/components/Feature/_feature.scss
+++ b/src/components/Feature/_feature.scss
@@ -1,6 +1,17 @@
 // This is file feature.scss
 .feature {
+    align-content: stretch;
     &__item {
       padding: 1rem;
+    }
+}
+
+@media only screen and (max-width: 579px) {
+    .feature  {
+      position: relative;
+      padding: 1rem;
+      &__item {
+        width: 50%;
+      }
     }
 }
