--- a/src/components/Feature/components/FeatureItem/_featureItem.scss
+++ b/src/components/Feature/components/FeatureItem/_featureItem.scss
@@ -4,7 +4,7 @@
     box-shadow: $box-shadow;
     padding: 2rem;
     transition: all .2s;
-    // border: 1px solid red;
+    height: 100%;
     &:hover {
         transform: translateY(-3px);
     }
@@ -22,5 +22,12 @@
     &__description {
         margin-left: 1rem;
         color: $color-gray;
+    }
+}
+
+
+@media only screen and (max-width: 579px) {
+    .feature-item {
+        padding: 1rem;
     }
 }
