--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,6 @@
 @import './variable';
 @import './base';
+@import './utility';
 
 @import '../components/Feature/components/FeatureItem/featureItem';
 @import '../components/Topic/TopicItem/topicItem';
