--- a/src/components/Feedback/_feedback.scss
+++ b/src/components/Feedback/_feedback.scss
@@ -39,6 +39,15 @@
     background-image: linear-gradient(to right,  $color-primary-dark, $color-primary-light);
     padding: $padding-container;
     margin-bottom: 15rem;
+    height: 300px;
+    position: relative;
+    .ant-carousel {
+        width: 100%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
         &__carousel {
             padding-bottom: 50px;
             &__item {
