--- a/src/components/Feature/_feature.scss
+++ b/src/components/Feature/_feature.scss
@@ -1,5 +1,6 @@
 // This is file feature.scss
 .feature {
+    margin-top: 8rem;
     align-content: stretch;
     &__item {
       padding: 1rem;
@@ -8,8 +9,12 @@
 
 @media only screen and (max-width: 579px) {
     .feature  {
+      margin-top: 5rem;
       position: relative;
       padding: 1rem;
+      &__heading {
+        padding-left: 2rem;
+      }
       &__item {
         width: 50%;
       }
