--- a/src/components/Description/_description.scss
+++ b/src/components/Description/_description.scss
@@ -1,11 +1,7 @@
 .description {
     padding: 0 $padding-container;
     display: flex;
-
-    .col-6 {
-        width: 49%;
-        ;
-    }
+    align-items: flex-start;
 
     h2 {
         font-size: $font-size-heading2;
@@ -17,14 +13,14 @@
     }
 
     &__content-padding {
-        padding: 10rem 10rem 0 0;
+        padding: 5rem 10rem 0 0;
     }
 
     &__img {
-        // background-image: url('../../img/learning-online.jpg');
         position: relative;
 
         img {
+            object-fit: scale-down;
             width: 100%;
             height: 100%;
         }
@@ -36,7 +32,7 @@
         padding: 0 $padding-container-md;
 
         &__content-padding {
-            padding: 10rem 5rem 0 0;
+            padding: 5rem 5rem 0 0;
         }
     }
 }
@@ -48,30 +44,18 @@
         &__content-padding {
             padding: 5rem 3rem 0 0;
         }
-
-        h2 {
-            line-height: 4rem;
-        }
     }
 }
 
 @media(max-width: 670px) {
     .description {
-        // flex-direction: column;
-
-
         h2 {
-            font-size: $font-size-heading5;
-            line-height: 2.5rem;
+            font-size: $font-size-heading3;
         }
 
         p {
             font-size: $font-size-paragraph1;
         }
-
-        // .col-6{
-        //     width: 100vw;
-        // }
     }
 }
 
@@ -80,15 +64,12 @@
         flex-direction: column;
 
         h2 {
-            font-size: $font-size-heading5;
-            line-height: 2.5rem;
-            // padding-left: 5px;
+            font-size: $font-size-heading4;
         }
 
         p {
             font-size: $font-size-paragraph2;
             padding: 0;
-            // padding-left: 5px;
         }
 
         .col-6 {
