--- a/src/components/Topic/_topic.scss
+++ b/src/components/Topic/_topic.scss
@@ -4,3 +4,11 @@
         padding: 1rem;
     }
 }
+
+@media only screen and (max-width: 579px) {
+    .topic  {
+      &__heading {
+        padding-left: 2rem;
+      }
+    }
+}
