--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,19 +1,19 @@
-@import './variable';
-@import './base';
+@import "./variable";
+@import "./base";
 
-@import '../components/Feature/components/FeatureItem/featureItem';
-@import '../components/Topic/TopicItem/topicItem';
-@import '../components/Header/components/ButtonCreate/buttonCreate';
-@import '../components/Header/components/Search/search';
-@import '../components/Header/components/Logo/logo';
+@import "../components/Feature/components/FeatureItem/featureItem";
+@import "../components/Topic/TopicItem/topicItem";
+@import "../components/Header/components/ButtonCreate/buttonCreate";
+@import "../components/Header/components/Search/search";
+@import "../components/Header/components/Logo/logo";
 
-@import '../components/ButtonCustom/buttonCustom';
-@import '../components/Heading/heading';
-@import '../components/Banner/banner';
-@import '../components/Feature/feature';
-@import '../components/Header/header';
-@import '../components/Topic/topic';
+@import "../components/ButtonCustom/buttonCustom";
+@import "../components/Heading/heading";
+@import "../components/Banner/banner";
+@import "../components/Feature/feature";
+@import "../components/Header/header";
+@import "../components/Topic/topic";
 
-@import '../components/Feedback/feedback';
-@import '../components/AppDownload/appdownload';
-@import '../components/CTA/cta';
+@import "../components/Feedback/feedback";
+@import "../components/AppDownload/appdownload";
+@import "../components/CTA/cta";
