--- a/src/components/CTA/_cta.scss
+++ b/src/components/CTA/_cta.scss
@@ -3,24 +3,28 @@
     margin-bottom: 15rem;
     &__wrap {
         margin-left: $padding-container-md;
-            margin-right: $padding-container-md;
-        &__title {
-            font-size: $font-size-heading1;
+        margin-right: $padding-container-md;
+    }
+    &__title {
+        font-size: $font-size-heading1;
+        color: $color-black;
+    }
+    &__button {
+        background-image: linear-gradient(
+            to right,
+            $color-primary-dark,
+            $color-primary-light
+        );
+        color: #fff;
+        font-weight: 600;
+        border-radius: 50px;
+        height: 68px;
+        width: 195px;
+        font-size: 20px;
+        margin-top: 3rem;
+        &:hover {
+            background-color: $color-warning;
             color: $color-black;
-        }
-        &__button {
-            background-image: linear-gradient(to right,  $color-primary-dark, $color-primary-light);
-            color: #fff;
-            font-weight: 600;
-            border-radius: 50px;
-            height: 68px;
-            width: 195px;
-            font-size: 20px;
-            margin-top: 3rem;
-            &:hover {
-                background-color: $color-warning;
-                color: $color-black;
-            }
         }
     }
 }
@@ -30,9 +34,9 @@
         &__wrap {
             margin-left: $padding-container-sm;
             margin-right: $padding-container-sm;
-            &__title {
-                font-size: $font-size-heading3;
-            }
+        }
+        &__title {
+            font-size: $font-size-heading3;
         }
     }
 }
