--- a/src/components/Feedback/_feedback.scss
+++ b/src/components/Feedback/_feedback.scss
@@ -8,7 +8,7 @@
     );
     padding: $padding-container;
     margin-bottom: 15rem;
-    height: 400px;
+    height: 450px;
     position: relative;
     .ant-carousel {
         width: 80%;
@@ -41,5 +41,11 @@
             content: '"';
             font-size: 50px;
         }
+    }
+}
+
+@media (max-width: 407px) {
+    .feedback {
+        height: 600px;
     }
 }
