--- a/src/components/Feature/_feature.scss
+++ b/src/components/Feature/_feature.scss
@@ -10,8 +10,8 @@
 
 @media only screen and (max-width: 579px) {
     .feature  {
-      margin-top: 5rem;
-      margin-bottom: 2rem;
+      // margin-top: 5rem;
+      // margin-bottom: 2rem;
       position: relative;
       padding: 1rem;
       &__item {
