--- a/src/components/Topic/_topic.scss
+++ b/src/components/Topic/_topic.scss
@@ -1,5 +1,6 @@
 .topic {
-    padding: $padding-container;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
     &__item {
         padding: 1rem;
     }
