--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,6 +10,7 @@
 @import '../components/Footer/components/Copyright/copyright';
 @import '../components/Footer/components/FooterColumn/footerColumn';
 @import '../components/Footer/components/SocialFooter/socialFooter';
+@import '../components/Feedback/components/Feedback-Item/feedbackItem';
 
 
 @import '../components/ButtonCustom/buttonCustom';
