edit feedback section

--- a/src/components/Feedback/_feedback.scss
+++ b/src/components/Feedback/_feedback.scss
@@ -6,9 +6,9 @@
         rgba(0, 147, 233, 1) 87%,
         rgba(128, 208, 199, 1) 100%
     );
-    padding: $padding-container;
+    // padding: $padding-container;
     margin-bottom: 15rem;
-    height: 450px;
+    height: 350px;
     position: relative;
     .ant-carousel {
         width: 80%;
