--- a/src/sass/_utility.scss
+++ b/src/sass/_utility.scss
@@ -14,18 +14,18 @@
     }
 }
 
-.u-padding-vertical-section {
-    padding-top: $padding-vertical-container;
-    padding-bottom: $padding-vertical-container;
+.u-margin-vertical-section {
+    margin-top: $margin-vertical-container;
+    margin-bottom: $margin-vertical-container;
 
     @media only screen and (max-width: 950px) {
-        padding-top: $padding-vertical-container-md;
-        padding-bottom: $padding-vertical-container-md;  
+        margin-top: $margin-vertical-container-md;
+        margin-bottom: $margin-vertical-container-md;  
     }
 
 
     @media only screen and (max-width: 579px) {
-        padding-top: $padding-vertical-container-sm;
-        padding-bottom: $padding-vertical-container-sm;
+        margin-top: $margin-vertical-container-sm;
+        margin-bottom: $margin-vertical-container-sm;
     }
 }
