--- a/src/components/Feedback/components/Feedback-Item/_feedbackItem.scss
+++ b/src/components/Feedback/components/Feedback-Item/_feedbackItem.scss
@@ -1,26 +1,34 @@
 .feedback-item {
-     &__name {
+    &__name {
         font-size: $font-size-heading1;
         color: $color-white;
         font-weight: bold;
     }
     &__location {
-        font-size: $font-size-heading5;
-        color: $color-white;
+        font-size: $font-size-heading6;
+        color: rgba($color-black, .8);
     }
     &__description {
         font-size: $font-size-heading5;
         color: $color-white;
+        position: relative;
         p::before {
-            content: '\201C';
-            font-size: 50px;
+            content: "\201C";
+            font-size: 10rem;
             line-height: 0;
-            font-family: 'Passion One', cursive;
+            font-family: "Passion One", cursive;
+            color: rgba($color-white, .6);
         }
         p::after {
-            content: '\201D';
-            font-size: 50px;
-            font-family: 'Passion One', cursive;
+            content: "\201D";
+            font-size: 10rem;
+            font-family: "Passion One", cursive;
+            position: absolute;
+            bottom: -2px;
+            line-height: 0;
+            right: 0;
+            color: rgba($color-white, .6);
+
         }
     }
 }
