--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -15,6 +15,7 @@ $font-size-heading2: 3.2rem;
 $font-size-heading3: 3rem;
 $font-size-heading4: 2.6rem;
 $font-size-heading5: 2.2rem;
+$font-size-heading6: 1.8rem;
 
 $font-size-subtitle1: 1.5rem;
 $font-size-subtitle2: 1.3rem;
@@ -26,9 +27,9 @@ $padding-container: 10%;
 $padding-container-md: 8%;
 $padding-container-sm: 5%;
 
-$padding-vertical-container: 8rem;
-$padding-vertical-container-md: 7rem;
-$padding-vertical-container-sm: 6rem;
+$margin-vertical-container: 8rem;
+$margin-vertical-container-md: 7rem;
+$margin-vertical-container-sm: 6rem;
 
 $box-shadow: 0px 6px 20px rgba($color-black, .05);
 
