--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -6,7 +6,7 @@ $color-gray: #8F9BB3;
 $color-white: #fff;
 $color-favourite: #ff0180;
 $color-warning: #ffc100;
-$color-succes: #00e096;
+$color-success: #00e096;
 $color-disable: rgba(#8f9bb3, .48);
 
 
