--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -18,7 +18,7 @@
         }
     }
     .ant-btn-primary{
-        background: $color-succes;
+        background: $color-success;
         margin: 3rem 0;
     }
     h1{
@@ -93,7 +93,7 @@
             // width: 10rem;
             padding: 0 8px;
             text-align: center;
-            background: $color-succes;
+            background: $color-success;
             margin: 0.5rem 0;
         }
     }
