--- a/src/components/CTA/_cta.scss
+++ b/src/components/CTA/_cta.scss
@@ -10,11 +10,7 @@
         color: $color-black;
     }
     &__button {
-        background-image: linear-gradient(
-            to right,
-            $color-primary-dark,
-            $color-primary-light
-        );
+        background-image: linear-gradient(to right, $color-primary-dark, $color-primary-light);
         color: #fff;
         font-weight: bold;
         border-radius: 50px;
@@ -22,9 +18,14 @@
         width: 195px;
         font-size: $font-size-heading5;
         margin-top: 3rem;
+        transition: all .5s;
+        border: none;
+
         &:hover {
-            background-color: $color-warning;
-            color: $color-black;
+            background-color: $color-success;
+            background-image: linear-gradient(to left, $color-primary-dark, $color-primary-light);
+            color: #fff;
+
         }
     }
 }
