Fix Responsive AppDownload, Value Components

--- a/src/components/AppDownload/_appdownload.scss
+++ b/src/components/AppDownload/_appdownload.scss
@@ -33,7 +33,26 @@
         &__wrap {
             &__mobile {
                 .slick-dots {
-                    display: none !important;
+                    li {
+                        width: 10px;
+                        height: 10px;
+                        button {
+                            background-color: $color-primary-dark;
+                            width: 10px;
+                            height: 10px;
+                            border-radius: 50%;
+                        }
+                    }
+                    li.slick-active {
+                        width: 10px;
+                        height: 10px;
+                        button {
+                            background-color: $color-primary-dark;
+                        }
+                    }
+                }
+                .slick-dots-bottom {
+                    bottom: -35px;
                 }
                 &__background {
                     height: 100%;
@@ -44,7 +63,7 @@
     }
 }
 
-@media (max-width: 407px) {
+@media (max-width: 411px) {
     .app-download__row {
         padding: 0;
     }
@@ -52,21 +71,21 @@
         h2 {
             font-size: $font-size-heading3;
         }
-        // &__download {
-        //     .app-store {
-        //         margin-left: 9px;
-        //         img {
-        //             margin-bottom: 10px;
-        //         }
-        //     }
-        // }
+        &__download {
+            .app-store {
+                margin-left: 9px;
+            }
+        }
     }
     .app-download__right__wrap {
         &__mobile {
-            // padding-left: 5px;
+            padding-left: 5px;
             &__background {
                 width: 60% !important;
                 height: 100%;
+            }
+            .slick-dots-bottom {
+                bottom: -35px;
             }
         }
     }
