--- a/src/components/Value/_value.scss
+++ b/src/components/Value/_value.scss
@@ -12,6 +12,7 @@
 
     p {
         color: $color-gray;
+        font-size: $font-size-heading5;
     }
 
     &__disflex {
@@ -32,6 +33,7 @@
         img {
             width: 100%;
             height: 100%;
+            object-fit: scale-down;
         }
     }
 }
