edit feedback and heading

--- a/src/components/Feedback/components/Feedback-Item/_feedbackItem.scss
+++ b/src/components/Feedback/components/Feedback-Item/_feedbackItem.scss
@@ -6,7 +6,8 @@
     }
     &__location {
         font-size: $font-size-heading6;
-        color: rgba($color-black, .8);
+        // color: rgba($color-black, .8);
+        color: rgba($color-white, .9);
     }
     &__description {
         font-size: $font-size-heading5;
