--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -19,6 +19,10 @@
     .ant-btn-primary{
         background: $color-success;
         margin: 3rem 0;
+        height: 60px;
+        width: 170px;
+        font-size: $font-size-heading6;
+
     }
     h1{
         font-size: $font-size-heading1;
@@ -71,6 +75,10 @@
         flex-direction: column;
         padding: 0 $padding-container-sm;
         max-height: 100vh;
+        &__button {
+            margin-top: 2rem !important;
+            margin-bottom: 2rem !important;
+        }
         &__img{
             position: relative;
             img {
