--- a/src/components/Feedback/components/Feedback-Item/_feedbackItem.scss
+++ b/src/components/Feedback/components/Feedback-Item/_feedbackItem.scss
@@ -33,3 +33,11 @@
         }
     }
 }
+
+// @media (max-width: 407px) {
+//     .feedback-item {
+//         &__description {
+//             text-align: justify;
+//         }
+//     }    
+// }
