--- a/src/components/AppDownload/_appdownload.scss
+++ b/src/components/AppDownload/_appdownload.scss
@@ -68,8 +68,10 @@
         padding: 0;
     }
     .app-download__left__wrap {
+        margin-bottom: 10px;
         h2 {
             font-size: $font-size-heading3;
+            margin-bottom: 20px;
         }
         &__download {
             .app-store {
@@ -85,7 +87,7 @@
                 height: 100%;
             }
             .slick-dots-bottom {
-                bottom: -35px;
+                bottom: -50px;
             }
         }
     }
