--- a/src/components/CTA/_cta.scss
+++ b/src/components/CTA/_cta.scss
@@ -39,5 +39,8 @@
         &__title {
             font-size: $font-size-heading3;
         }
+        &__button {
+            margin-top: 2rem;
+        }
     }
 }
