--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -13,6 +13,6 @@ html {
 body {
     box-sizing: border-box;
     font-size: $font-size-paragraph1;
-    // line-height: 2.2;
     color: $color-black;
+    // font-family: 'Circular Std';
 }
