--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -63,5 +63,15 @@
         &__btn {
             margin-top: 1rem;
         }
+        &__media {
+            position: fixed;
+            top: 0;
+            background-color: $color-white;
+            z-index: 1001;
+            width: 100%;
+            padding-bottom: 1rem;
+            padding-top: 1rem;
+            box-shadow: $box-shadow;
+        }
     }
 }
