edit padding app download

--- a/src/components/AppDownload/_appdownload.scss
+++ b/src/components/AppDownload/_appdownload.scss
@@ -1,7 +1,7 @@
 .app-download {
     width: 100%;
     margin: 0;
-    margin-bottom: 15rem;
+    // margin-bottom: 15rem;
     &__row {
         width: 100%;
         padding-left: $padding-container-md;
