--- a/src/components/Feedback/_feedback.scss
+++ b/src/components/Feedback/_feedback.scss
@@ -6,7 +6,7 @@
         rgba(0, 147, 233, 1) 87%,
         rgba(128, 208, 199, 1) 100%
     );
-    margin-bottom: 15rem;
+    // margin-bottom: 15rem;
     height: 350px;
     position: relative;
     .ant-carousel {
