--- a/src/components/CTA/_cta.scss
+++ b/src/components/CTA/_cta.scss
@@ -1,6 +1,6 @@
 .cta {
     text-align: center;
-    margin-bottom: 10rem;
+    // margin-bottom: 10rem;
     &__wrap {
         margin-left: $padding-container-md;
         margin-right: $padding-container-md;
