--- a/src/components/ButtonCustom/_buttonCustom.scss
+++ b/src/components/ButtonCustom/_buttonCustom.scss
@@ -1,6 +1,7 @@
 .button-custom {
     height: 45px !important;
     font-size: $font-size-heading6;
+    border-radius: $boder-radious-btn;
     &.ant-btn-primary {
         background-color: $color-primary-dark !important;
         font-size: $font-size-paragraph1;
