--- a/src/sass/_variable.scss
+++ b/src/sass/_variable.scss
@@ -34,3 +34,6 @@ $margin-vertical-container-sm: 6rem;
 $box-shadow: 0px 6px 20px rgba($color-black, .05);
 
 $boder-radious: 50px;
+$boder-radious-btn: 5px;
+
+
