edit font color

--- a/src/components/Topic/components/TopicItem/_topicItem.scss
+++ b/src/components/Topic/components/TopicItem/_topicItem.scss
@@ -16,5 +16,9 @@
         top: 1rem;
         left: 2rem;
         font-size: $font-size-heading4;
+        h3 {
+            color: $color-black;
+
+        }
     }
 }
