--- a/src/components/AppDownload/_appdownload.scss
+++ b/src/components/AppDownload/_appdownload.scss
@@ -92,3 +92,19 @@
         }
     }
 }
+
+@media (max-width: 390px) {
+    .app-download {
+        &__left {
+            &__wrap {
+                &__download {
+                    display: flex;
+                    flex-direction: column;
+                   a {
+                       margin-top: 10px;
+                   }
+                }
+            }
+        }
+    }
+}
