--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,9 @@
 @import '../components/Footer/components/FooterColumn/footerColumn';
 @import '../components/Footer/components/SocialFooter/socialFooter';
 @import '../components/Feedback/components/Feedback-Item/feedbackItem';
+@import '../components/Header/components/HeaderCategory/headerCategory';
+@import '../components/Header/components/HeaderCategoryItem/headerCategoryItem';
+@import '../components/Header/components/HeaderBurgerMenu/headerBurgerMenu';
 
 @import '../components/ButtonLarge/buttonLarge';
 @import '../components/ButtonCustom/buttonCustom';
