--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -8,6 +8,7 @@ html {
   /* default font-size: 16px -> 62.5% * 16px = 10px */
   /* => 1rem = 10px*/
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
