--- a/src/components/CTA/_cta.scss
+++ b/src/components/CTA/_cta.scss
@@ -1,9 +1,17 @@
 .cta {
-    text-align: center;
+    // text-align: center;
     // margin-bottom: 10rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+    &__column {
+        // flex: 1,
+    }
     &__wrap {
         margin-left: $padding-container-md;
         margin-right: $padding-container-md;
+        text-align: center;
     }
     &__title {
         font-size: $font-size-heading1;
@@ -11,6 +19,16 @@
     }
 }
 
+@media (max-width: 750px) {
+    .cta {
+        flex-direction: column-reverse;
+        &__wrap {
+            order: 1;
+            margin-bottom: 4rem;
+        }
+    }
+
+}
 @media (max-width: 407px) {
     .cta {
         &__wrap {
