--- a/src/components/CustomInput/_customInput.scss
+++ b/src/components/CustomInput/_customInput.scss
@@ -13,6 +13,7 @@
         z-index: 1000;
         color: $color-primary-dark;
         font-size: $font-size-subtitle1;
+        font-weight: 400;
     }
     input {
         // margin-top: 50px;
