--- a/src/components/Form/_form.scss
+++ b/src/components/Form/_form.scss
@@ -14,6 +14,7 @@
     &__btn-start {
         text-align: center;
         margin: auto;
+        margin-bottom: 2rem;
     }
 
     &__checkbox-disflex{
@@ -68,4 +69,12 @@
 .form___checkbox-disflex {
     display: flex;
     text-align: center;
+}
+
+
+@media (max-width: 750px) {
+    .form {
+        padding: 1rem 2rem;
+    }
+
 }
