--- a/src/components/Header/components/HeaderBurgerMenu/_headerBurgerMenu.scss
+++ b/src/components/Header/components/HeaderBurgerMenu/_headerBurgerMenu.scss
@@ -3,6 +3,7 @@
     // position: relative;
     width: 100%;
     padding: .2rem 2rem;
+    overflow: hidden;
     &__top {
         display: flex;
         justify-content: space-between;
@@ -48,7 +49,7 @@
                position: absolute;
                width: 100%;
                height: 1px;
-               background-color: rgba($color-primary-dark, .3);
+               background-color: rgba($color-primary-dark, .1);
                bottom: -10px;
                left: 50%;
                transform: translateX(-50%);
