refactor component name

--- a/src/components/Value/_value.scss
+++ b/src/components/Value/_value.scss
@@ -1,159 +1,16 @@
-.value {
-    // padding: 0 $padding-container;
-
-    .col-6 {
-        width: 49%;
-    }
-
-    h2 {
-        font-size: $font-size-heading2;
-        color: $color-black;
-    }
-
-    p {
-        color: $color-gray;
-        font-size: $font-size-heading5;
-    }
-
-    &__disflex {
-        display: flex;
-    }
-
-    &__content-padding {
-        padding: 10rem 10rem 0 0;
-    }
-    &__content-padding-left {
-        padding: 10rem 0 0 10rem;
-    }
-
-    &__img {
-        position: relative;
-
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: scale-down;
-        }
+.feature {
+    align-content: stretch;
+    &__item {
+      padding: 1rem;
     }
 }
 
-@media (max-width: 1240px) {
-    .value {
-        // padding: 0 $padding-container-md;
-
-        &__content-padding {
-            padding: 10rem 5rem 0 0;
-        }
-        &__content-padding-left {
-            padding: 10rem 0 0 5rem;
-        }
-    }
-}
-
-// @media (max-width: 1050px) {
-//     .value {
-//         padding: 0 $padding-container-sm;
-
-//         &__content-padding {
-//             padding: 5rem 3rem 0 0;
-//         }
-
-//         &__content-padding {
-//             padding: 5rem 0 0 3rem;
-//         }
-
-//         h2 {
-//             line-height: 4rem;
-//         }
-//     }
-// }
-
-@media (max-width: 670px) {
-    .value {
-        h2 {
-            font-size: $font-size-heading5;
-            line-height: 2.5rem;
-        }
-
-        p {
-            font-size: $font-size-paragraph1;
-        }
-    }
-}
-
-// @media (max-width: 510px) {
-//     .value {
-//         flex-direction: column;
-
-//         h2 {
-//             font-size: $font-size-heading5;
-//             line-height: 2.5rem;
-//             // padding-left: 5px;
-//         }
-
-//         p {
-//             font-size: $font-size-paragraph2;
-//             padding: 0;
-//             // padding-left: 5px;
-//         }
-
-//         .col-6 {
-//             width: 80vw;
-//         }
-
-//         &__content-padding {
-//             padding: 5rem 0;
-//             text-align: center;
-//         }
-
-//         &__img {
-//             position: relative;
-
-//             img {
-//                 width: 80vw;
-//                 height: 80%;
-//             }
-//         }
-//     }
-// }
-
-@media (max-width: 859px) {
-    .value {
-        &__disflex {
-            flex-direction: column;
-            margin-bottom: $padding-container-md;
-        }
-        &__img {
-            width: 100%;
-            order: 0;
-        }
-        &__content-padding {
-            order: 1;
-            padding: 0;
-            padding-top: $padding-container-sm;
-            text-align: center;
-            h2 {
-                font-size: $font-size-heading4;
-            }
-            p {
-                padding: 0;
-                font-size: $font-size-heading5;
-            }
-        }
-        &__content-padding-left {
-            padding: 0;
-            padding-top: $padding-container-sm;
-            text-align: center;
-            h2 {
-                font-size: $font-size-heading4;
-            }
-            p {
-                padding: 0;
-                font-size: $font-size-heading5;
-            }
-        }
-        .col-6 {
-            width: 100%;
-        }
+@media only screen and (max-width: 579px) {
+    .feature  {
+      position: relative;
+      padding: 1rem;
+      &__item {
+        width: 50%;
+      }
     }
 }
