--- a/src/components/Header/components/HeaderCategoryItem/_headerCategoryItem.scss
+++ b/src/components/Header/components/HeaderCategoryItem/_headerCategoryItem.scss
@@ -1,4 +1,8 @@
 .header-category-item {
     text-decoration: none;
     font-size: $font-size-heading6;
+    display: block;
+    &:hover {
+        color: rgba($color-primary-dark, .7);
+    }
 }
